페이지 추가와 js 기능 구현

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -28,7 +28,8 @@
       <ul class="gnb">
         <li><a href="../index.html">홈</a></li>
         <li><a aria-current="page" href="schedule.html">일정</a></li>
-        <li><a href="library.html">도서 목록</a></li>
+        <li><a href="library.html">도서관</a></li>
+        <li><a href="community.html">커뮤니티</a></li>
       </ul>
     </nav>
   </header>
