--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <ul class="gnb">
         <li><a aria-current="page" href="index.html">홈</a></li>
         <li><a href="pages/schedule.html">일정</a></li>
-        <li><a href="pages/library.html">도서 목록</a></li>
+        <li><a href="pages/library.html">도서관</a></li>
+        <li><a href="pages/community.html">커뮤니티</a></li>
       </ul>
     </nav>
   </header>
