--- a/pages/book-detail.html
+++ b/pages/book-detail.html
@@ -43,7 +43,8 @@
         <li><a href="../index.html">홈</a></li>
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
-        <li><a href="community.html">커뮤니티</a></li>
+          <li><a href="community.html">커뮤니티</a></li>
+          <li><a href="myspace.html">내 공간</a></li>
       </ul>
     </nav>
   </header>
