--- a/pages/myspace.html
+++ b/pages/myspace.html
@@ -19,9 +19,9 @@
     .memo-item:last-child{border:none}
   </style>
 </head>
-<body>
+<body class="subpage">
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
-  <header class="site-header">
+  <header class="site-header is-solid">
     <a class="logo" href="../index.html">교환독서</a>
     <nav aria-label="주요">
       <ul class="gnb">
