--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -14,7 +14,7 @@
   <!-- 외부 스타일시트 (상위 폴더에서 참조) -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="subpage">
   <!-- Skip link for accessibility -->
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
   
@@ -22,7 +22,7 @@
        HEADER
        상단 고정 헤더: 로고 + 네비게이션
   ============================================= -->
-  <header class="site-header">
+  <header class="site-header is-solid">
     <a class="logo" href="../index.html">교환독서</a>
     <nav aria-label="주요">
       <ul class="gnb">
