책 정보 업데이트 및 리뷰 시스템 개선

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -53,7 +53,7 @@
          현재 진행중인 2차 회차 일정
     ============================================= -->
     <section id="ongoing" class="panel">
-      <h2>2차 (10–2월)</h2>
+      <h2>2차 (10–4월)</h2>
       
       <!-- 일정 테이블: 기간 / 제목 / 담당자 -->
       <table class="table" aria-label="2차 회차 진행중">
@@ -65,20 +65,29 @@
           </tr>
         </thead>
         <tbody>
-          <!-- 10-11월: 첫 번째 기간 (3권) -->
+          <!-- 10-11월: 첫 번째 기간 (4권) -->
           <tr><td>10–11월</td><td>지뢰 글리코</td><td data-person="태이">태이</td></tr>
           <tr><td>10–11월</td><td>일억 번째 여름</td><td data-person="희수">희수</td></tr>
           <tr><td>10–11월</td><td>바깥은 여름</td><td data-person="시현">시현</td></tr>
+          <tr><td>10–11월</td><td>다정한 사람이 이긴다</td><td data-person="지원">지원</td></tr>
 
-          <!-- 12-1월: 두 번째 기간 (3권 교환) -->
-          <tr><td>12–1월</td><td>지뢰 글리코</td><td data-person="시현">시현</td></tr>
-          <tr><td>12–1월</td><td>일억 번째 여름</td><td data-person="태이">태이</td></tr>
-          <tr><td>12–1월</td><td>바깥은 여름</td><td data-person="희수">희수</td></tr>
+          <!-- 12-1월: 두 번째 기간 (4권 교환) -->
+          <tr><td>12–1월</td><td>지뢰 글리코</td><td data-person="희수">희수</td></tr>
+          <tr><td>12–1월</td><td>일억 번째 여름</td><td data-person="시현">시현</td></tr>
+          <tr><td>12–1월</td><td>바깥은 여름</td><td data-person="지원">지원</td></tr>
+          <tr><td>12–1월</td><td>다정한 사람이 이긴다</td><td data-person="태이">태이</td></tr>
 
-          <!-- 2월: 세 번째 기간 (3권 교환) -->
-          <tr><td>2월</td><td>지뢰 글리코</td><td data-person="희수">희수</td></tr>
-          <tr><td>2월</td><td>일억 번째 여름</td><td data-person="시현">시현</td></tr>
+          <!-- 2월: 세 번째 기간 (4권 교환) -->
+          <tr><td>2월</td><td>지뢰 글리코</td><td data-person="시현">시현</td></tr>
+          <tr><td>2월</td><td>일억 번째 여름</td><td data-person="지원">지원</td></tr>
           <tr><td>2월</td><td>바깥은 여름</td><td data-person="태이">태이</td></tr>
+          <tr><td>2월</td><td>다정한 사람이 이긴다</td><td data-person="희수">희수</td></tr>
+
+          <!-- 3-4월: 네 번째 기간 (4권 교환) -->
+          <tr><td>3–4월</td><td>지뢰 글리코</td><td data-person="지원">지원</td></tr>
+          <tr><td>3–4월</td><td>일억 번째 여름</td><td data-person="태이">태이</td></tr>
+          <tr><td>3–4월</td><td>바깥은 여름</td><td data-person="희수">희수</td></tr>
+          <tr><td>3–4월</td><td>다정한 사람이 이긴다</td><td data-person="시현">시현</td></tr>
         </tbody>
       </table>
       <p class="muted">진행중 일정은 변동될 수 있어요.</p>
@@ -101,7 +110,7 @@
       <h2>1차 (4–8월)</h2>
       
       <!-- 일정 테이블: 기간 / 제목 / 담당자 -->
-      <table class="table" aria-label="1차 회차 기록">
+      <table class="table table-3books" aria-label="1차 회차 기록">
         <thead>
           <tr>
             <th scope="col" style="width:8rem">기간</th>
