--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Google Fonts: Nanum Myeongjo (나눔명조) 로딩 최적화 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Grandiflora+One&display=swap" rel="stylesheet">
 
   <!-- 외부 스타일시트 (루트에서 참조) -->
   <link rel="stylesheet" href="css/style.css">
@@ -141,7 +141,7 @@
             </div>
             <div class="flip-card-back">
               <div class="team-avatar">희수</div>
-              <p class="team-bio">누군가 아름답게 엔딩을 맞이하는 것을 보는 걸 좋아해요. 아름다운 죽음만 있다면 장르는 상관 없답니다.</p>
+              <p class="team-bio">아름답게 엔딩을 맞이하는 것을 좋아해요. 아름다운 죽음만 있다면 장르는 상관 없답니다.</p>
             </div>
           </div>
         </article>
