--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -29,8 +29,9 @@
         <li><a href="../index.html">홈</a></li>
         <li><a aria-current="page" href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
-          <li><a href="community.html">커뮤니티</a></li>
-          <li><a href="myspace.html">내 공간</a></li>
+        <li><a href="community.html">커뮤니티</a></li>
+        <li><a href="myspace.html">내 프로필</a></li>
+        <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
   </header>
