스타일 개선: 네비게이션 가독성, 섹션 간격 조정, 푸터 업데이트

--- a/pages/book-detail.html
+++ b/pages/book-detail.html
@@ -49,11 +49,11 @@
 </head>
 <body>
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
-  <header class="site-header">
+  <header class="site-header is-solid">
     <a class="logo" href="../index.html">교환독서</a>
     <nav aria-label="주요">
       <ul class="gnb">
-        <li><a href="../index.html">홈</a></li>
+        <li><a href="../index.html?from=internal">홈</a></li>
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
         <li><a href="community.html">커뮤니티</a></li>
@@ -113,13 +113,25 @@
     </section>
 
     <nav class="page-nav" aria-label="페이지 네비게이션">
-      <a href="../index.html" class="page-link"><span class="page-number">1</span></a>
+      <a href="../index.html?from=internal" class="page-link"><span class="page-number">1</span></a>
       <a href="schedule.html" class="page-link"><span class="page-number">2</span></a>
       <a href="library.html" class="page-link current" aria-current="page"><span class="page-number">3</span></a>
+      <a href="community.html" class="page-link"><span class="page-number">4</span></a>
+      <a href="myspace.html" class="page-link"><span class="page-number">5</span></a>
     </nav>
   </main>
+  
   <footer class="site-footer">
-    <small>© 2025 ExchangeBook</small>
+    <div class="footer-content">
+      <div class="footer-links">
+        <a href="about.html">About</a>
+        <span class="footer-divider">·</span>
+        <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <span class="footer-divider">·</span>
+        <a href="mailto:your-email@example.com">Contact</a>
+      </div>
+      <small>© 2024 교환독서. All rights reserved.</small>
+    </div>
   </footer>
 
   <script src="../js/bookData.js"></script>
@@ -164,6 +176,7 @@
         coverEl.innerHTML = '<div class="placeholder">잘못된 접근입니다. 도서 목록에서 다시 선택해 주세요.</div>';
         return;
       }
+      
       titleEl.textContent = book.title;
       authorEl.textContent = `${book.author}${book.publisher? ' · ' + book.publisher : ''}${book.year? ' · ' + book.year : ''}`;
       
