--- a/pages/community.html
+++ b/pages/community.html
@@ -32,7 +32,7 @@
     <a class="logo" href="../index.html">교환독서</a>
     <nav aria-label="주요">
       <ul class="gnb">
-        <li><a href="../index.html">홈</a></li>
+        <li><a href="../index.html?from=internal">홈</a></li>
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
         <li><a aria-current="page" href="community.html">커뮤니티</a></li>
@@ -88,13 +88,25 @@
     </section>
 
     <nav class="page-nav" aria-label="페이지 네비게이션">
-      <a href="../index.html" class="page-link"><span class="page-number">1</span></a>
+      <a href="../index.html?from=internal" class="page-link"><span class="page-number">1</span></a>
       <a href="schedule.html" class="page-link"><span class="page-number">2</span></a>
       <a href="library.html" class="page-link"><span class="page-number">3</span></a>
+      <a href="community.html" class="page-link current" aria-current="page"><span class="page-number">4</span></a>
+      <a href="myspace.html" class="page-link"><span class="page-number">5</span></a>
     </nav>
   </main>
+  
   <footer class="site-footer">
-    <small>© 2025 ExchangeBook</small>
+    <div class="footer-content">
+      <div class="footer-links">
+        <a href="about.html">About</a>
+        <span class="footer-divider">·</span>
+        <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <span class="footer-divider">·</span>
+        <a href="mailto:your-email@example.com">Contact</a>
+      </div>
+      <small>© 2024 교환독서. All rights reserved.</small>
+    </div>
   </footer>
 
   <script src="../js/bookData.js"></script>
