섹션 간격 인라인 스타일 적용

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Grandiflora+One&display=swap" rel="stylesheet">
 
   <!-- 외부 스타일시트 (루트에서 참조) -->
-  <link rel="stylesheet" href="css/style.css?v=28">
+  <link rel="stylesheet" href="css/style.css?v=33">
   
   <!-- 인트로 배경 이미지 preload -->
   <link rel="preload" as="image" href="images/five.jpg">
@@ -79,7 +79,7 @@
     </section>
 
     <!-- About Section: 교환독서 소개 -->
-    <section aria-labelledby="about" class="about-section fade-in-on-scroll">
+    <section aria-labelledby="about" class="about-section fade-in-on-scroll" style="padding-top: 8rem; padding-bottom: 7rem;">
       <h2 id="about">교환독서란?</h2>
       <div class="about-content">
         <!-- 소개 문구: 캐주얼하고 친근한 톤 -->
@@ -93,7 +93,7 @@
     </section>
 
     <!-- How Section: 진행 방법 5단계 -->
-    <section aria-labelledby="how" class="how-section fade-in-on-scroll">
+    <section aria-labelledby="how" class="how-section fade-in-on-scroll" style="margin-top: 3rem; padding-bottom: 5rem; padding-top: 3rem;">
       <h2 id="how">진행 방법</h2>
       <div class="how-content">
         <div class="how-step">
@@ -120,7 +120,7 @@
     </section>
 
     <!-- Team Section: 진행 인원 소개 -->
-    <section aria-labelledby="team" class="team-section fade-in-on-scroll">
+    <section aria-labelledby="team" class="team-section fade-in-on-scroll" style="margin-bottom: 10rem; margin-top: 7rem;">
       <h2 id="team">진행 인원</h2>
       <div class="team-grid">
         <!-- 시현 카드 -->
