--- a/pages/library.html
+++ b/pages/library.html
@@ -113,5 +113,6 @@
   <!-- 라이브러리 상호작용 스크립트 -->
   <script src="../js/bookData.js"></script>
   <script src="../js/library.js"></script>
+  <script src="../js/page-transitions.js"></script>
 </body>
 </html>
