--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -193,5 +193,6 @@
   </footer>
   
   <script src="../js/schedule-tool.js"></script>
+  <script src="../js/page-transitions.js"></script>
 </body>
 </html>
