페이지별 배경색 적용, 스크롤 스냅 구현, 텍스트 색상 통일 및 섹션 스타일 개선

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
   </style>
 </head>
-<body>
+<body data-page="home">
   <!-- ============================================
        INTRO OVERLAY
        페이지 로딩 시 4.5초간 표시되는 인트로 화면
@@ -80,8 +80,8 @@
 
     <!-- About Section: 교환독서 소개 -->
     <section aria-labelledby="about" class="about-section fade-in-on-scroll" style="padding-top: 8rem; padding-bottom: 7rem;">
-      <h2 id="about">교환독서란?</h2>
-      <div class="about-content">
+      <h2 id="about" style="color: #FAF0D9 !important;">교환독서란?</h2>
+      <div class="about-content" style="color: #FAF0D9 !important;">
         <!-- 소개 문구: 캐주얼하고 친근한 톤 -->
         <p>교환독서는 서로의 책을 나누며 새로운 이야기를 만나는 독서 모임입니다.</p>
         <p>한 달에 한 번, 각자가 읽은 책을 다른 사람의 책과 교환하며,<br>평소 선택하지 않았을 책들을 만나고 다양한 관점을 경험합니다.</p>
@@ -118,6 +118,11 @@
         </div>
       </div>
     </section>
+
+    <!-- 섹션 구분선 장식 -->
+    <div style="text-align:center; margin: 6rem auto; opacity: .25;">
+      <span style="font-size: 1.2rem; letter-spacing: .8rem; color: var(--brand);">◆ ◆ ◆</span>
+    </div>
 
     <!-- Team Section: 진행 인원 소개 -->
     <section aria-labelledby="team" class="team-section fade-in-on-scroll" style="margin-bottom: 10rem; margin-top: 7rem;">
@@ -173,6 +178,11 @@
         </div>
       </div>
     </section>
+
+    <!-- 섹션 구분선 장식 -->
+    <div style="text-align:center; margin: 6rem auto; opacity: .25;">
+      <span style="font-size: 1.2rem; letter-spacing: .8rem; color: var(--brand);">◆ ◆ ◆</span>
+    </div>
 
     <!-- About Site Section: 웹사이트 제작 배경 -->
     <section aria-labelledby="about-site" class="about-site-section fade-in-on-scroll">
