--- a/pages/myspace.html
+++ b/pages/myspace.html
@@ -32,7 +32,7 @@
     .progress-text{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);font-size:.8rem;font-weight:600;color:var(--spine)}
   </style>
 </head>
-<body class="subpage">
+<body class="subpage" data-page="myspace">
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
   <header class="site-header is-solid">
     <a class="logo" href="../index.html">교환독서</a>
