--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -14,7 +14,7 @@
   <!-- 외부 스타일시트 (상위 폴더에서 참조) -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="subpage">
+<body class="subpage" data-page="schedule">
   <!-- Skip link for accessibility -->
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
   
