원본 색상 팔레트 복원 및 실험적 변경사항 정리

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </section>
 
     <!-- About Section: 교환독서 소개 -->
-    <section aria-labelledby="about" class="about-section fade-in-on-scroll" style="padding-top: 8rem; padding-bottom: 7rem;">
-      <h2 id="about" style="color: #FAF0D9 !important;">교환독서란?</h2>
-      <div class="about-content" style="color: #FAF0D9 !important;">
+    <section aria-labelledby="about" class="about-section fade-in-on-scroll">
+      <h2 id="about">교환독서란?</h2>
+      <div class="about-content">
         <!-- 소개 문구: 캐주얼하고 친근한 톤 -->
         <p>교환독서는 서로의 책을 나누며 새로운 이야기를 만나는 독서 모임입니다.</p>
         <p>한 달에 한 번, 각자가 읽은 책을 다른 사람의 책과 교환하며,<br>평소 선택하지 않았을 책들을 만나고 다양한 관점을 경험합니다.</p>
@@ -93,7 +93,7 @@
     </section>
 
     <!-- How Section: 진행 방법 5단계 -->
-    <section aria-labelledby="how" class="how-section fade-in-on-scroll" style="margin-top: 3rem; padding-bottom: 5rem; padding-top: 3rem;">
+    <section aria-labelledby="how" class="how-section fade-in-on-scroll">
       <h2 id="how">진행 방법</h2>
       <div class="how-content">
         <div class="how-step">
@@ -119,13 +119,8 @@
       </div>
     </section>
 
-    <!-- 섹션 구분선 장식 -->
-    <div style="text-align:center; margin: 6rem auto; opacity: .25;">
-      <span style="font-size: 1.2rem; letter-spacing: .8rem; color: var(--brand);">◆ ◆ ◆</span>
-    </div>
-
     <!-- Team Section: 진행 인원 소개 -->
-    <section aria-labelledby="team" class="team-section fade-in-on-scroll" style="margin-bottom: 10rem; margin-top: 7rem;">
+    <section aria-labelledby="team" class="team-section fade-in-on-scroll">
       <h2 id="team">진행 인원</h2>
       <div class="team-grid">
         <!-- 시현 카드 -->
@@ -179,40 +174,15 @@
       </div>
     </section>
 
-    <!-- 섹션 구분선 장식 -->
-    <div style="text-align:center; margin: 6rem auto; opacity: .25;">
-      <span style="font-size: 1.2rem; letter-spacing: .8rem; color: var(--brand);">◆ ◆ ◆</span>
-    </div>
-
     <!-- About Site Section: 웹사이트 제작 배경 -->
     <section aria-labelledby="about-site" class="about-site-section fade-in-on-scroll">
       <h2 id="about-site">이 사이트를 만든 이유</h2>
       <div class="about-content">
         <p>교환독서를 하면서 누가 어떤 책을 읽고 있는지, 언제 교환해야 하는지 헷갈릴 때가 많았어요.</p>
-        <p>단톡방에 흩어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에 이 웹사이트를 만들었습니다.</p>
-        <p>우리만의 작은 도서관처럼, 기록하고 공유하는 공간이 되었으면 좋겠어요. 📚</p>
+        <p>단톡방에 흔어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에 이 웹사이트를 만들었습니다.</p>
+        <p>우리만의 작은 도서관처럼, 기록하고 공유하는 공간이 되었으면 좋겠어요.</p>
       </div>
     </section>
-
-      
-      <!-- Page Navigation: 책 페이지 스타일 네비게이션 -->
-      <nav class="page-nav" aria-label="페이지 네비게이션">
-        <a href="index.html?from=internal" class="page-link current" aria-current="page">
-          <span class="page-number">1</span>
-        </a>
-        <a href="pages/schedule.html" class="page-link">
-          <span class="page-number">2</span>
-        </a>
-        <a href="pages/library.html" class="page-link">
-          <span class="page-number">3</span>
-        </a>
-        <a href="pages/community.html" class="page-link">
-          <span class="page-number">4</span>
-        </a>
-        <a href="pages/myspace.html" class="page-link">
-          <span class="page-number">5</span>
-        </a>
-      </nav>
 
   </main>
 
