--- a/pages/library.html
+++ b/pages/library.html
@@ -11,10 +11,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
   
+  <!-- Font Awesome for book icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  
   <!-- 외부 스타일시트 (상위 폴더에서 참조) -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="subpage" data-page="library">
+  <!-- 부유하는 책 애니메이션 -->
+  <div class="floating-books" aria-hidden="true">
+    <i class="fas fa-book floating-book"></i>
+    <i class="fas fa-book-open floating-book"></i>
+    <i class="fas fa-book floating-book"></i>
+    <i class="fas fa-bookmark floating-book"></i>
+    <i class="fas fa-book-open floating-book"></i>
+    <i class="fas fa-book floating-book"></i>
+    <i class="fas fa-feather floating-book"></i>
+    <i class="fas fa-book-open floating-book"></i>
+  </div>
+  
   <!-- Skip link for accessibility -->
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
   
@@ -75,24 +90,6 @@
       <div id="bookList"></div>
     </div>
 
-    <!-- Page Navigation: 책 페이지 스타일 네비게이션 -->
-    <nav class="page-nav" aria-label="페이지 네비게이션">
-      <a href="../index.html?from=internal" class="page-link">
-        <span class="page-number">1</span>
-      </a>
-      <a href="schedule.html" class="page-link">
-        <span class="page-number">2</span>
-      </a>
-      <a href="library.html" class="page-link current" aria-current="page">
-        <span class="page-number">3</span>
-      </a>
-      <a href="community.html" class="page-link">
-        <span class="page-number">4</span>
-      </a>
-      <a href="myspace.html" class="page-link">
-        <span class="page-number">5</span>
-      </a>
-    </nav>
   </main>
 
   <!-- ============================================
