이메일, 저작권, CSS 표준 수정, 스크롤 스냅 제거, 팀 폰트 복원

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" data-theme="heritage">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
   
   <!-- 스타일시트 -->
-  <link rel="stylesheet" href="../css/style.css?v=5">
+  <link rel="stylesheet" href="../css/style.css">
   
   <!-- 파비콘 -->
   <link rel="icon" type="image/png" href="../images/favicon.png">
@@ -89,8 +89,8 @@
         </div>
         <div>
           <strong>이메일:</strong> 
-          <a href="mailto:your-email@example.com" style="color:var(--primary);text-decoration:underline">
-            your-email@example.com
+          <a href="mailto:sihyeon25@naver.com" style="color:var(--primary);text-decoration:underline">
+            sihyeon25@naver.com
           </a>
         </div>
         <div>
@@ -147,7 +147,7 @@
       <h2>📬 연락하기</h2>
       <p>프로젝트에 대한 문의나 제안이 있으시면 언제든 연락해주세요!</p>
       <div style="margin-top:1.5rem">
-        <a href="mailto:your-email@example.com" class="btn">이메일 보내기</a>
+        <a href="mailto:sihyeon25@naver.com" class="btn">이메일 보내기</a>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer" class="btn ghost" style="margin-left:1rem">GitHub 보기</a>
       </div>
     </section>
@@ -162,9 +162,9 @@
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
-        <a href="mailto:your-email@example.com">Contact</a>
+        <a href="mailto:sihyeon25@naver.com">Contact</a>
       </div>
-      <small>© 2024 교환독서. All rights reserved.</small>
+      <small>© 2025 교환독서. All rights reserved.</small>
     </div>
   </footer>
 
