--- a/pages/book-detail.html
+++ b/pages/book-detail.html
@@ -47,7 +47,7 @@
     .star-input label:hover ~ label{color:gold}
   </style>
 </head>
-<body>
+<body class="subpage" data-page="book-detail">
   <a href="#main" class="sr-only">본문으로 건너뛰기</a>
   <header class="site-header is-solid">
     <a class="logo" href="../index.html">교환독서</a>
@@ -121,9 +121,9 @@
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
-        <a href="mailto:your-email@example.com">Contact</a>
+        <a href="mailto:sihyeon25@naver.com">Contact</a>
       </div>
-      <small>© 2024 교환독서. All rights reserved.</small>
+      <small>© 2025 교환독서. All rights reserved.</small>
     </div>
   </footer>
 
