--- a/pages/myspace.html
+++ b/pages/myspace.html
@@ -94,7 +94,16 @@
   </main>
   
   <footer class="site-footer">
-    <small>© 2025 ExchangeBook</small>
+    <div class="footer-content">
+      <div class="footer-links">
+        <a href="about.html">About</a>
+        <span class="footer-divider">·</span>
+        <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <span class="footer-divider">·</span>
+        <a href="mailto:sihyeon25@naver.com">Contact</a>
+      </div>
+      <small>© 2025 교환독서. All rights reserved.</small>
+    </div>
   </footer>
   
   <script src="../js/bookData.js"></script>
