--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -168,9 +168,9 @@
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
-        <a href="mailto:your-email@example.com">Contact</a>
+        <a href="mailto:sihyeon25@naver.com">Contact</a>
       </div>
-      <small>© 2024 교환독서. All rights reserved.</small>
+      <small>© 2025 교환독서. All rights reserved.</small>
     </div>
   </footer>
   
