--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Grandiflora+One&display=swap" rel="stylesheet">
 
   <!-- 외부 스타일시트 (루트에서 참조) -->
-  <link rel="stylesheet" href="css/style.css?v=54">
+  <link rel="stylesheet" href="css/style.css">
   
   <!-- 인트로 배경 이미지 preload -->
   <link rel="preload" as="image" href="images/five.jpg">
@@ -52,7 +52,7 @@
         <li><a href="pages/schedule.html">일정</a></li>
         <li><a href="pages/library.html">도서관</a></li>
           <li><a href="pages/community.html">커뮤니티</a></li>
-          <li><a href="pages/myspace.html">내 공간</a></li>
+          <li><a href="pages/myspace.html">내 프로필</a></li>
       </ul>
     </nav>
   </header>
@@ -197,9 +197,9 @@
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
-        <a href="mailto:your-email@example.com">Contact</a>
+        <a href="mailto:sihyeon25@naver.com">Contact</a>
       </div>
-      <small>© 2024 교환독서. All rights reserved.</small>
+      <small>© 2025 교환독서. All rights reserved.</small>
     </div>
   </footer>
   <script>
