버그 수정: favicon 제거, 중복 탭 제거, 날짜 수정, 하드코딩 개선, 리뷰 삭제 버그 수정

--- a/pages/community.html
+++ b/pages/community.html
@@ -63,7 +63,7 @@
           <div class="note-meta">
             <span class="author">관리자</span>
             <span class="divider">·</span>
-            <span class="date">2일 전</span>
+            <span class="date">12월 14일</span>
           </div>
           <div class="note-preview">12월 교환독서 모임 일정을 안내드립니다. 많은 참여 부탁드려요!</div>
         </div>
