--- a/index.html
+++ b/index.html
@@ -176,12 +176,13 @@
 
     <!-- About Site Section: 웹사이트 제작 배경 -->
     <section aria-labelledby="about-site" class="about-site-section fade-in-on-scroll">
-      <h2 id="about-site">이 사이트를 만든 이유</h2>
-      <div class="about-content">
+      <blockquote class="site-reason">
+        <span class="quote-mark">"</span>
         <p>교환독서를 하면서 누가 어떤 책을 읽고 있는지, 언제 교환해야 하는지 헷갈릴 때가 많았어요.</p>
-        <p>단톡방에 흔어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에 이 웹사이트를 만들었습니다.</p>
+        <p>단톡방에 흩어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에 이 웹사이트를 만들었습니다.</p>
         <p>우리만의 작은 도서관처럼, 기록하고 공유하는 공간이 되었으면 좋겠어요.</p>
-      </div>
+        <cite>— 교환독서 팀</cite>
+      </blockquote>
     </section>
 
   </main>
