Update: 네비게이션 커뮤니티게시판 변경, 고정공지사항 추가, 독서명언 기능 구현, 위시리스트 제거, Q&A 링크 업데이트

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a aria-current="page" href="index.html?from=internal">홈</a></li>
         <li><a href="pages/schedule.html">일정</a></li>
         <li><a href="pages/library.html">도서관</a></li>
-          <li><a href="pages/community.html">커뮤니티</a></li>
+        <li><a href="pages/community.html">게시판</a></li>
           <li><a href="pages/myspace.html">내 프로필</a></li>
       </ul>
     </nav>
@@ -178,10 +178,10 @@
     <section aria-labelledby="about-site" class="about-site-section fade-in-on-scroll">
       <blockquote class="site-reason">
         <span class="quote-mark">"</span>
-        <p>교환독서를 하면서 누가 어떤 책을 읽고 있는지, 언제 교환해야 하는지 헷갈릴 때가 많았어요.</p>
-        <p>단톡방에 흩어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에 이 웹사이트를 만들었습니다.</p>
+        <p>교환독서를 하면서 누가 어떤 책을 읽고 있는지,<br>언제 교환해야 하는지 헷갈릴 때가 많았어요.</p>
+        <p>단톡방에 흩어진 일정과 책 정보를 한곳에 모아두면 편하겠다는 생각에<br>이 웹사이트를 만들었습니다.</p>
         <p>우리만의 작은 도서관처럼, 기록하고 공유하는 공간이 되었으면 좋겠어요.</p>
-        <cite>— 교환독서 팀</cite>
+        <cite>— &lt;홈페이지를 만든 이유&gt;</cite>
       </blockquote>
     </section>
 
@@ -194,7 +194,7 @@
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
-        <a href="pages/about.html">About</a>
+        <a href="pages/faq.html">Q&A</a>
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
