--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
         <li><a href="../index.html?from=internal">홈</a></li>
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
-        <li><a href="community.html">커뮤니티</a></li>
+        <li><a href="community.html">게시판</a></li>
         <li><a href="myspace.html">내 프로필</a></li>
       </ul>
     </nav>
@@ -64,7 +64,7 @@
         <ul style="line-height:1.8">
           <li><strong>도서관</strong> - 모임에서 읽은 모든 책 목록과 리뷰</li>
           <li><strong>일정</strong> - 책 교환 일정과 모임 날짜 관리</li>
-          <li><strong>커뮤니티</strong> - 공지사항, 읽고 싶은 책 위시리스트, 랜덤 책 추천</li>
+          <li><strong>게시판</strong> - 공지사항, 독서 명언 뽑기</li>
           <li><strong>내 프로필</strong> - 독서 목표 설정과 뱃지 획득</li>
           <li><strong>멤버 소개</strong> - 네 명의 멤버 프로필과 독서 취향</li>
         </ul>
