--- a/pages/book-detail.html
+++ b/pages/book-detail.html
@@ -56,7 +56,7 @@
         <li><a href="../index.html?from=internal">홈</a></li>
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
-        <li><a href="community.html">커뮤니티</a></li>
+        <li><a href="community.html">게시판</a></li>
         <li><a href="myspace.html">내 프로필</a></li>
       </ul>
     </nav>
@@ -117,7 +117,7 @@
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
-        <a href="about.html">About</a>
+        <a href="faq.html">Q&A</a>
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
